src/objects/echosign_dev1__Field_Template__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Agreement_Field__c</fullName>
        <description>Select Target Agreement Field.</description>
        <inlineHelpText>Select Target Agreement Field.</inlineHelpText>
        <label>Target Agreement Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Agreement_Template__c</fullName>
        <label>Agreement Template</label>
        <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
        <relationshipName>Field_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Constant_Value__c</fullName>
        <description>Input a value for the target field.</description>
        <inlineHelpText>Input a value for the target field.</inlineHelpText>
        <label>Target Field Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Field_Value__c</fullName>
        <description>Select a field from the master object to be the source field.</description>
        <inlineHelpText>Select a field from the master object to be the source field.</inlineHelpText>
        <label>Select Source Field from Master Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Mapping Method</label>
        <picklist>
            <picklistValues>
                <fullName>Input Specific Value</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Select Master Object Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Map Data into Agreement Field</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Field Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Data into Agreement Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>